updated the Email and Password

--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+    <!-- Google Analytics Tag (Correct Placement) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4PDBPWR7TQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-4PDBPWR7TQ');
+    </script>
+
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/hsp-icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Primary SEO Meta Tags -->
+    <title>HSP Technologies – International Journal of Engineering, Technology and Management Sciences</title>
+    <meta name="title" content="HSP Technologies – International Journal of Engineering, Technology and Management Sciences" />
+    <meta name="description" content="HSP Technologies publishes peer-reviewed research papers in Engineering, Technology, and Management Sciences. High-quality academic articles, fast review process, global editorial board." />
+
+    <!-- Keywords for SEO -->
+    <meta name="keywords"
+      content="HSP Technologies, Engineering Journal, Technology Journal, Management Sciences Journal, Research Publications, Academic Journals, Peer Reviewed Journal, IJETMS, UGC Journal, SCI Journal, Engineering Research, Technology Research"
+    />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://hsp-technologies.org/" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- 🌐 OPEN GRAPH (WhatsApp + Facebook + Instagram Preview) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://hsp-technologies.org/" />
+    <meta property="og:title" content="HSP Technologies – International Journal of Engineering, Technology and Management Sciences" />
+    <meta property="og:description"
+      content="A peer-reviewed journal publishing research in Engineering, Technology and Management Sciences. Submit your research papers today."
+    />
+    <meta property="og:image"
+      content="https://firebasestorage.googleapis.com/v0/b/hsp-technologies.firebasestorage.app/o/HSP-logo.jpeg?alt=media&token=92d7cc13-1d5a-4d57-acbd-452e04207294"
+    />
+
+    <!-- 🐦 Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://hsp-technologies.org/" />
+    <meta name="twitter:title" content="HSP Technologies – International Journal of Engineering, Technology and Management Sciences" />
+    <meta name="twitter:description" content="A peer-reviewed journal publishing research in Engineering, Technology and Management Sciences." />
+    <meta name="twitter:image"
+      content="https://firebasestorage.googleapis.com/v0/b/hsp-technologies.firebasestorage.app/o/HSP-logo.jpeg?alt=media&token=92d7cc13-1d5a-4d57-acbd-452e04207294"
+    />
+
+    <!-- 📘 Schema.org (Journal Metadata for Google Ranking) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Periodical",
+        "name": "HSP Technologies – International Journal of Engineering, Technology and Management Sciences",
+        "publisher": { "@type": "Organization", "name": "HSP Technologies" },
+        "url": "https://hsp-technologies.org",
+        "description": "A peer-reviewed journal publishing research articles in Engineering, Technology, and Management Sciences.",
+        "inLanguage": "en"
+      }
+    </script>
+
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
